--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,97 +3,31 @@ on:
   push:
     branches:
       - main
-    paths-ignore:
-      - "**.md"
-      - "src/**"
   pull_request:
     branches:
       - main
-    paths-ignore:
-      - "**.md"
-      - "contrib/**"
-      - "Dockerfile"
-  workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
-  install-dependencies:
-    # This is a spot check for make install.dependencies on macOS and Windows platforms.
-    # Finch-core provides the core dependencies needed to run Finch such as the base OS
-    # image, rootfs, and Lima bundle. Validate the mechanism used to install the core
-    # dependencies works on the respective platforms.
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-13, windows-2022]
-    runs-on: ${{ matrix.os }}
+  old:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-          submodules: true
-      - name: Setup go
-        uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7 # v5.0.1
-        with:
-          go-version-file: e2e/go.mod
-          cache-dependency-path: e2e/go.sum
-      - name: Install platform dependencies
-        run: make install.dependencies
-      - name: Clean up dependencies
-        run: make clean
+      - name: Generate timestamp
+        id: timestamp
+        run: echo "::set-output name=value::$(date +%s)" >> $GITHUB_OUTPUT
+      
+      - name: Check timestamp
+        run: |
+          timestamp=${{ steps.timestamp.output.value }}
+          echo "Env var is $timestamp"
+  
+  new:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate timestamp
+        id: timestamp
+        run: echo "{value}={$(date +%s)}" >> $GITHUB_OUTPUT
 
-  e2e-tests:
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          [
-            [self-hosted, macos, amd64, 13, test],
-            [self-hosted, macos, amd64, 14, test],
-            [self-hosted, macos, arm64, 13, test],
-            [self-hosted, macos, arm64, 14, test],
-          ]
-        vm_type: [ "vz", "qemu" ]
-    runs-on: ${{ matrix.os }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332 # v4.1.7
-        with:
-          fetch-depth: 0
-          persist-credentials: false
-          submodules: true
-      - name: Setup go
-        uses: actions/setup-go@cdcb36043654635271a94b9a6d1392de5bb323a7 # v5.0.1
-        with:
-          go-version-file: e2e/go.mod
-          cache-dependency-path: e2e/go.sum
-      - name: Clean up previous files
-        shell: zsh {0}
+      - name: Check timestamp
         run: |
-          sudo rm -rf ~/.lima
-          sudo rm -rf ./_output
-          if pgrep '^qemu-system'; then
-            sudo pkill '^qemu-system'
-          fi
-          if pgrep '^socket_vmnet'; then
-            sudo pkill '^socket_vmnet'
-          fi
-      - name: Install dependencies
-        shell: zsh {0}
-        run: brew install lz4 automake autoconf libtool
-      - name: Build project
-        shell: zsh {0}
-        run: |
-          export PATH="/opt/homebrew/opt/libtool/libexec/gnubin:$PATH"
-          which libtool
-          # Install socket_vmnet to `_output/bin` which is used in $PATH
-          SOCKET_VMNET_TEMP_PREFIX=$(pwd)/_output/ make lima-socket-vmnet
-          make install.dependencies
-      - name: Run e2e tests
-        shell: zsh {0}
-        run: FINCH_VM_TYPE=${{ matrix.vm_type }} make test-e2e
+          timestamp=${{ steps.timestamp.output.value }}
+          echo "Env var is $timestamp"
