--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,5 +35,5 @@ jobs:
 
       - name: Check timestamp
         run: |
-          timestamp=${{ steps.timestamp.output.value }}
+          timestamp=${{ steps.timestamp.outputs.value }}
           echo "Env var is $timestamp"
