test: dockerfile ci changes in fork
Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -14,3 +14,11 @@ updates:
   commit-message:
     prefix: "ci"
     include: "scope"
+- package-ecosystem: "gomod"
+  directory: "/rootfs/cosign"
+  dependency-type: direct
+  schedule:
+    interval: "daily"
+  commit-message:
+    prefix: "build"
+    include: "scope"
