--- a/.github/workflows/rootfs.yaml
+++ b/.github/workflows/rootfs.yaml
@@ -66,7 +66,7 @@ jobs:
           if-no-files-found: error
 
   push-rootfs-image:
-    if: github.repository == 'runfinch/finch-core' && github.event_name != 'pull_request'
+    # if\: github.repository == 'runfinch/finch-core' && github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     needs: build-rootfs-image
 
@@ -86,15 +86,15 @@ jobs:
       TIMESTAMP: ${{ needs.build-rootfs-image.outputs.timestamp }}
 
     steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
-        with:
-          aws-region: ${{ secrets.REGION }}
-          role-to-assume: ${{ secrets.ROLE }}
-          role-session-name: rootfs-ecr-image-upload-session
+      # - name: Configure AWS credentials
+      #   uses: aws-actions/configure-aws-credentials@e3dd6a429d7300a6a4c196c26e071d42e0343502 # v4.0.2
+      #   with:
+      #     aws-region: ${{ secrets.REGION }}
+      #     role-to-assume: ${{ secrets.ROLE }}
+      #     role-session-name: rootfs-ecr-image-upload-session
 
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
+      # - name: Login to Amazon ECR
+      #   uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076 # v2.0.1
 
       - name: Download container image artifact
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
@@ -104,10 +104,10 @@ jobs:
       - name: Load container image
         run: docker load -i finch-rootfs-${{ matrix.arch }}-${{ env.TIMESTAMP }}.tar
 
-      - name: Tag and push container image to Amazon ECR
-        run: |
-          docker tag finch-rootfs-image-production:intermediate ${{ secrets.ROOTFS_IMAGE_ECR_REPOSITORY_NAME }}:${{ matrix.arch }}-${{ env.TIMESTAMP }}
-          docker push ${{ secrets.ROOTFS_IMAGE_ECR_REPOSITORY_NAME }}:${{ matrix.arch }}-${{ env.TIMESTAMP }}
+      # - name: Tag and push container image to Amazon ECR
+      #   run: |
+      #     docker tag finch-rootfs-image-production:intermediate ${{ secrets.ROOTFS_IMAGE_ECR_REPOSITORY_NAME }}:${{ matrix.arch }}-${{ env.TIMESTAMP }}
+      #     docker push ${{ secrets.ROOTFS_IMAGE_ECR_REPOSITORY_NAME }}:${{ matrix.arch }}-${{ env.TIMESTAMP }}
 
       - name: Checkout repo
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -133,7 +133,7 @@ jobs:
           fi
 
           # Upload tarball and shasum to S3
-          aws s3 cp . s3://${{ secrets.DEPENDENCY_BUCKET_NAME }}/common/$ARCHPATH/ --recursive --exclude "*" --include "finch-rootfs-production-${{ matrix.arch }}-${{ env.TIMESTAMP }}.tar.gz*"
+          # aws s3 cp . s3://${{ secrets.DEPENDENCY_BUCKET_NAME }}/common/$ARCHPATH/ --recursive --exclude "*" --include "finch-rootfs-production-${{ matrix.arch }}-${{ env.TIMESTAMP }}.tar.gz*"
 
           cat <<EOL > deps/rootfs.conf
           ARTIFACT_BASE_URL=https://deps.runfinch.com
@@ -143,14 +143,14 @@ jobs:
           ${ARTIFACT_KEY}_512_DIGEST=$sha512_digest
           EOL
 
-      - name: Create PR
-        uses: peter-evans/create-pull-request@5e914681df9dc83aa4e4905692ca88beb2f9e91f # v7.0.5
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          signoff: true
-          branch: create-rootfs-${{ matrix.arch }}-${{ env.TIMESTAMP }} 
-          delete-branch: true
-          title: 'build(deps): Update windows rootfs'
-          add-paths: deps/rootfs.conf
-          body: |  
-            Update the rootfs for the windows platform.
+      # - name: Create PR
+      #   uses: peter-evans/create-pull-request@5e914681df9dc83aa4e4905692ca88beb2f9e91f # v7.0.5
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     signoff: true
+      #     branch: create-rootfs-${{ matrix.arch }}-${{ env.TIMESTAMP }} 
+      #     delete-branch: true
+      #     title: 'build(deps): Update windows rootfs'
+      #     add-paths: deps/rootfs.conf
+      #     body: |  
+      #       Update the rootfs for the windows platform.
