--- a/.github/workflows/update-dependencies.yaml
+++ b/.github/workflows/update-dependencies.yaml
@@ -8,7 +8,7 @@ on:
         type: string
         description: The tag of nerdctl full archive to update
         required: false
-        default: 'latest'
+        default: ''
 
 permissions:
   contents: read
